Cross-browser issues: fix button alignment in Edge (Edge looks OK now)

--- a/src/Button/button.css
+++ b/src/Button/button.css
@@ -1,5 +1,5 @@
 .d2ui-button {
-    align-items: normal;
+    align-items: center;
     background-color: transparent;
     border-color: transparent;
     border-width: 1px;
@@ -121,7 +121,7 @@
     &--large {
         font-size: 0.9375rem;
         padding: 10px 16px 11px 16px;
-        align-items: flex-end;
+        align-items: center;
 
         .material-icons {
             line-height: 1rem;
